--- a/src/app/index.css
+++ b/src/app/index.css
@@ -19,3 +19,19 @@ input[type=number]::-webkit-outer-spin-button {
     transition: all 0.2s linear;
     stroke: #4D17E2;
 }
+
+.hamburger-line{
+  @apply w-[30px] h-[2px] my-2;
+}
+
+.hamburger-active > span:nth-child(1){
+  @apply rotate-45
+}
+
+.hamburger-active > span:nth-child(2){
+  @apply scale-0
+}
+
+.hamburger-active > span:nth-child(3){
+  @apply -rotate-45
+}
